# ptrie

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: release.sh
.github/workflows/: release.yml  test.yml
benches/: benchmark.rs  criterion_benchmark.rs
src/: error.rs  lib.rs  trie.rs  trie_node.rs
tests/: trie_tests.rs
