[package]
name = "ptrie"
version = "0.5.2"
authors = [
    "Alexander Serebryakov <alex.serebr@gmail.com>",
    "Vincent Emonet <vincent.emonet@gmail.com>",
]
description = """Generic trie implementation with a support of different key and value types,
and common prefix search."""
keywords = ["trie", "data-structures", "generic"]
categories = ["data-structures"]
homepage = "https://github.com/vemonet/ptrie"
repository = "https://github.com/vemonet/ptrie.git"
readme = "README.md"
license-file = "LICENSE"

edition = "2021"


[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[profile.release]
lto = true
