[package]
name = "ptrie"
version = "0.5.2"
authors = [
    "Alexander Serebryakov <alex.serebr@gmail.com>",
    "Vincent Emonet <vincent.emonet@gmail.com>",
]
description = """Generic trie data structure implementation (prefix tree) with support for different key and value types,
and functions to search for common prefixes or postfixes."""
keywords = ["trie", "data-structures", "generic", "prefix-tree"]
categories = ["data-structures"]
homepage = "https://github.com/vemonet/ptrie"
repository = "https://github.com/vemonet/ptrie.git"
readme = "README.md"
license-file = "LICENSE"

edition = "2021"


[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[profile.release]
lto = true
