[package]
name = "metacomplete_ptrie"
version = "0.7.0"
authors = [
    "Alexander Serebryakov <alex.serebr@gmail.com>",
    "Vincent Emonet <vincent.emonet@gmail.com>",
    "plein"
]
description = """Generic trie data structure implementation (prefix tree) with support for different key and value types,
and functions to search for common prefixes or postfixes."""
keywords = ["trie", "data-structures", "generic", "prefix-tree"]
categories = ["data-structures"]
homepage = "https://github.com/ple1n/ptrie"
repository = "https://github.com/ple1n/ptrie.git"
readme = "README.md"
license-file = "LICENSE"

edition = "2021"


[dependencies]
polonius-the-crab = "0.4.1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"


[features]
serde = ["dep:serde"]

[profile.release]
lto = true


[[bench]]
name = "criterion_benchmark"
harness = false
